Basic website setup

--- a/src/PlexLibraryMonitor/Views/Home/Index.cshtml
+++ b/src/PlexLibraryMonitor/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "plibmon";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">plibmon</h1>
+    <p>Monitors the media in your plex library</p>
+    <p> Here's the link: @Model</p>
 </div>
