--- a/src/PlexLibraryMonitor/Views/Home/Index.cshtml
+++ b/src/PlexLibraryMonitor/Views/Home/Index.cshtml
@@ -7,3 +7,6 @@
     <p>Monitors the media in your plex library</p>
     <p> Here's the link: @Model</p>
 </div>
+
+<p>This reload is hot hot hot</p>
+
