Added API to the PliblibraryMonitor project

--- a/src/Plibmon.BlazorWasm/Pages/Index.razor
+++ b/src/Plibmon.BlazorWasm/Pages/Index.razor
@@ -1,10 +1,10 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>plimon</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>plibmon</h1>
 
-Welcome to your new app.
+Simple monitor for your plex library.
 
 <SurveyPrompt Title="How is Blazor working for you?"/>
 
