--- a/src/Plibmon.BlazorWasm/Shared/NavMenu.razor
+++ b/src/Plibmon.BlazorWasm/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject HttpClient Http
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">plibmon</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -11,7 +13,7 @@
     <div class="container-fluid">
         <div class="nav-status">
             <img class="plex-icon" src="pngegg.png" alt="Plex icon"/>
-            <a class="navbar-brand" href="">Can we connect to plex</a>
+            <a class="navbar-brand" href="">@isConnectableToPlex</a>
         </div>
     </div>
 </div>
@@ -50,5 +52,27 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+    string isConnectableToPlex = "Checking Plex connection";
+
+    private async Task IsConnectableToPlex()
+    {
+        var connectResult = await Http.GetStringAsync("/api/Plibmon").ConfigureAwait(false);
+        // var connectResult = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");       
+        bool.TryParse(connectResult, out var result);
+
+        // isConnectableToPlex = result == true ? "Connected to Plex" : "Unable to connect to Plex";
+        isConnectableToPlex = result switch {
+            true => "Connected to Plex",
+            false => "Unable to connect to Plex"
+        };
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await IsConnectableToPlex();
+        await base.OnInitializedAsync();
+    }
+
 
 }
