Fixed problem where new pin was generated on app load

--- a/src/Plibmon/Client/Pages/PlexConnect.razor
+++ b/src/Plibmon/Client/Pages/PlexConnect.razor
@@ -11,7 +11,7 @@
 
     private async Task GetPinLink(CancellationToken cancellationToken)
     {
-        var pinLinkResult = await Http.GetStringAsync("api/Plibmon").ConfigureAwait(false);
+        var pinLinkResult = await Http.GetStringAsync("api/Plibmon/GetPinLink").ConfigureAwait(false);
         _link = pinLinkResult;
     }
 
