--- a/src/Plibmon/Client/Shared/NavMenu.razor
+++ b/src/Plibmon/Client/Shared/NavMenu.razor
@@ -57,7 +57,7 @@
 
     private async Task IsConnectableToPlex()
     {
-        var connectResult = await Http.GetStringAsync("/api/Plibmon").ConfigureAwait(false);
+        var connectResult = await Http.GetStringAsync("/api/Plibmon/CanConnectToPlex").ConfigureAwait(false);
         // var connectResult = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");       
         bool.TryParse(connectResult, out var result);
 
