--- a/src/Plibmon/Client/Shared/NavMenu.razor
+++ b/src/Plibmon/Client/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@inject HttpClient Http
+﻿@inject HttpClient _http
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="nav-status">
             <img class="plex-icon" src="pngegg.png" alt="Plex icon"/>
-            <a class="navbar-brand" href="">@isConnectableToPlex</a>
+            <a class="navbar-brand" href="">@_isConnectableToPlex</a>
         </div>
     </div>
 </div>
@@ -31,11 +31,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
@@ -44,25 +39,25 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
+    private bool _collapseNavMenu = true;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string? NavMenuCssClass => _collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+        _collapseNavMenu = !_collapseNavMenu;
     }
     
-    string isConnectableToPlex = "Checking Plex connection";
+    string _isConnectableToPlex = "Checking Plex connection";
 
     private async Task IsConnectableToPlex()
     {
-        var connectResult = await Http.GetStringAsync("/api/Plibmon/CanConnectToPlex").ConfigureAwait(false);
+        var connectResult = await _http.GetStringAsync("/api/Plibmon/CanConnectToPlex").ConfigureAwait(false);
         // var connectResult = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");       
         bool.TryParse(connectResult, out var result);
 
         // isConnectableToPlex = result == true ? "Connected to Plex" : "Unable to connect to Plex";
-        isConnectableToPlex = result switch {
+        _isConnectableToPlex = result switch {
             true => "Connected to Plex",
             false => "Unable to connect to Plex"
         };
