--- a/src/Plibmon/Client/Shared/NavMenu.razor
+++ b/src/Plibmon/Client/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿@inject HttpClient _http
-
+﻿
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Plibmon</a>
@@ -10,12 +9,7 @@
 </div>
 
 <div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <div class="nav-status">
-            <img class="plex-icon" src="pngegg.png" alt="Plex icon"/>
-            <a class="navbar-brand" href="">@_isConnectableToPlex</a>
-        </div>
-    </div>
+    <PlexConnection></PlexConnection>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
@@ -47,26 +41,4 @@
     {
         _collapseNavMenu = !_collapseNavMenu;
     }
-    
-    string _isConnectableToPlex = "Checking Plex connection";
-
-    private async Task IsConnectableToPlex()
-    {
-        var connectResult = await _http.GetStringAsync("/api/Plibmon/CanConnectToPlex").ConfigureAwait(false);
-        // var connectResult = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");       
-        bool.TryParse(connectResult, out var result);
-
-        // isConnectableToPlex = result == true ? "Connected to Plex" : "Unable to connect to Plex";
-        _isConnectableToPlex = result switch {
-            true => "Connected to Plex",
-            false => "Unable to connect to Plex"
-        };
-    }
-
-    protected override async Task OnInitializedAsync()
-    {
-        await IsConnectableToPlex();
-        await base.OnInitializedAsync();
-    }
-
 }
